--- a/views/pizza.html
+++ b/views/pizza.html
@@ -112,8 +112,8 @@
         left: 16.66666667%;
       }
     }
-    .clearfix:before,
-    .clearfix:after,
+    /*.clearfix:before,*/
+    /*.clearfix:after,*/
     .container:before,
     .container:after,
     .row:before,
@@ -121,7 +121,7 @@
       content: " ";
       display: table;
     }
-    .clearfix:after,
+    /*.clearfix:after,*/
     .container:after,
     .row:after {
       clear: both;
