Fix images that were not being responsive...

--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,7 @@ header {
 
 .img-responsive {
     display: block;
-    height: auto \9;
-    max-width: 100%;
+    height: auto;
     width: 100%;
 }
 
